artik birden fazla urun eklenebiliyor

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 <footer class="footer mt-5">
   <div class="container-fluid bg-primary text-center text-white py-2">
     <div class="row">
-      <h6 class="display-6">XYZ Kitapcilik Tum Haklari Saklidir &COPY; 2024</h6>
+      <p class="lead text-center mt-2">XYZ Kitapcilik Tum Haklari Saklidir &COPY; 2024</p>
     </div>
   </div>
 </footer>
@@ -256,20 +256,97 @@
     <div>
       
       <div class="container text-center">
-      <span id="kitapIcerik">Sepetinizde urun bulunmamaktadir</span>  <br> <br>
+      <span id="kitapIcerik">Sepetinizde urun bulunmamaktadir</span>
+      <span id="kitapAdet"></span><br><br>
+      <button type="button"  class="btn btn-warning" onclick="ilkKitapAzalsin()">Azalt</button>
+      <button type="button" class="btn btn-warning" onclick="ilkKitapKalksin()">Kaldir</button> 
+      <button type="button"  class="btn btn-warning" onclick="ilkKitapArtsin()">Arttir</button> 
+
+      <br> <br>
+
       <span id="kitapIcerik2"></span>
+      <span id="kitapAdet2"></span><br><br>
+
+      <button type="button"  class="btn btn-warning" onclick="ikinciKitapAzalsin()">Azalt</button>
+      <button type="button" class="btn btn-warning" onclick="ikinciKitapKalksin()">Kaldir</button> 
+      <button type="button"  class="btn btn-warning" onclick="ikinciKitapArtsin()">Arttir</button>
+
+      <br> <br>
+
+      <span id="kitapIcerik3"></span> 
+      <span id="kitapAdet3"></span><br><br>
+      <button type="button"  class="btn btn-warning" onclick="ucuncuKitapAzalsin()">Azalt</button>
+      <button type="button" class="btn btn-warning" onclick="ucuncuKitapKalksin()">Kaldir</button> 
+      <button type="button"  class="btn btn-warning" onclick="ucuncuKitapArtsin()">Arttir</button>
+
+      <br> <br>
+
+      <span id="kitapIcerik4"></span> 
+      <span id="kitapAdet4"></span><br><br>
+
+      <button type="button"  class="btn btn-warning" onclick="dorduncuKitapAzalsin()">Azalt</button>
+      <button type="button" class="btn btn-warning" onclick="dorduncuKitapKalksin()">Kaldir</button> 
+      <button type="button"  class="btn btn-warning" onclick="dorduncuKitapArtsin()">Arttir</button>
+
+      <br> <br>
+
+      <span id="kitapIcerik5"></span>  
+      <span id="kitapAdet5"></span><br><br>
+
+      <button type="button"  class="btn btn-warning" onclick="besinciKitapAzalsin()">Azalt</button>
+      <button type="button" class="btn btn-warning" onclick="besinciKitapKalksin()">Kaldir</button> 
+      <button type="button"  class="btn btn-warning" onclick="besinciKitapArtsin()">Arttir</button>
+
+      <br> <br>
+
+      <span id="kitapIcerik6"></span> 
+      <span id="kitapAdet6"></span><br><br>
+
+      <button type="button"  class="btn btn-warning" onclick="altinciKitapAzalsin()">Azalt</button>
+      <button type="button" class="btn btn-warning" onclick="altinciKitapKalksin()">Kaldir</button> 
+      <button type="button"  class="btn btn-warning" onclick="altinciKitapArtsin()">Arttir</button>
+
+      <br> <br>
+
+      <span id="kitapIcerik7"></span>  
+      <span id="kitapAdet7"></span><br><br>
+
+      <button type="button"  class="btn btn-warning" onclick="yedinciKitapAzalsin()">Azalt</button>
+      <button type="button" class="btn btn-warning" onclick="yedinciKitapKalksin()">Kaldir</button> 
+      <button type="button"  class="btn btn-warning" onclick="yedinciKitapArtsin()">Arttir</button>
+
+      <br> <br>
+
+      <span id="kitapIcerik8"></span>  
+      <span id="kitapAdet8"></span><br><br>
+
+      <button type="button"  class="btn btn-warning" onclick="sekizinciKitapAzalsin()">Azalt</button>
+      <button type="button" class="btn btn-warning" onclick="sekizinciKitapKalksin()">Kaldir</button> 
+      <button type="button"  class="btn btn-warning" onclick="sekizinciKitapArtsin()">Arttir</button>
+
+      <br> <br>
+
+      <span id="kitapIcerik9"></span>  
+      <span id="kitapAdet9"></span><br><br>
+
+      <button type="button"  class="btn btn-warning" onclick="dokuzuncuKitapAzalsin()">Azalt</button>
+      <button type="button" class="btn btn-warning" onclick="dokuzuncuKitapKalksin()">Kaldir</button> 
+      <button type="button"  class="btn btn-warning" onclick="dokuzuncuKitapArtsin()">Arttir</button>
+
+      <br> <br>
+
       </div>
       <div class="container text-center">
         <div class="row">
           <div class="col-4">
-            <button type="button" class="btn btn-warning" onclick="kitapAzalt()">Azalt</button> <br> <br>
+            <!-- <button type="button" id="buton1" class="btn btn-warning" onclick="kitapAzalt()">Hepsini Azalt</button> <br> <br> -->
 
           </div>
           <div class="col-4">
-            <button type="button" class="btn btn-warning" onclick="kitapKaldir()">Kaldir</button>
+            <!-- <button type="button" class="btn btn-warning" onclick="kitapKaldir()">Hepsini Kaldir</button> -->
           </div>
           <div class="col-4">
-            <button type="button"  class="btn btn-warning" onclick="kitapArttir()">Arttir</button> <br> <br>
+            <!-- <button type="button"  class="btn btn-warning" onclick="kitapArttir()">Hepsini Arttir</button> <br> <br> -->
 
           </div>
         </div>
